# libbip3x-feedstock

./: README.md  conda-forge.yml
.ci_support/: linux_aarch64_.yaml
recipe/: bld.bat  bld.ps1  build.sh  meta.yaml
recipe/patches/: 0001-add-so-version.patch  0002-add-so-version-c.patch  0003-add-so-version-jni.patch  0004-change-cmake-files-location.patch  0005-find-toolbox-package.patch  0005-include-fetch-gtest.patch  0006-remove-toolbox-install.patch  xxxx-find-toolbox-package.patch
recipe/tests/: CMakeLists.txt
